TitanHubPackage/main/default/objects/Video__c/fields/IsCurrentVideo__c.field-meta.xml
<CustomField>
    <fullName>IsCurrentVideo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCurrentVideo</label>
    <type>Checkbox</type>
</CustomField>