TitanHubPackage/main/default/objects/Video__c/fields/YoutubeThumbnailLink__c.field-meta.xml
<CustomField>
    <fullName>YoutubeThumbnailLink__c</fullName>
    <description>Follow this format &quot;http://img.youtube.com/vi/VideoUniqueCodeHere/hqdefault.jpg&quot;</description>
    <label>YoutubeThumbnailLink</label>
    <required>true</required>
    <type>Url</type>
</CustomField>