TitanHubPackage/main/default/objects/Video__c/fields/YoutubeVideoLink__c.field-meta.xml
<CustomField>
    <fullName>YoutubeVideoLink__c</fullName>
    <description>Follow this format &quot;https://www.youtube.com/embed?v=UNIQUEYOUTUBEID&quot;</description>
    <label>YoutubeVideoLink</label>
    <required>true</required>
    <type>Url</type>
</CustomField>